--- a/src/layouts/app/components/header.component.module.css
+++ b/src/layouts/app/components/header.component.module.css
@@ -15,7 +15,7 @@
 .headerLogo {
   width: 200px;
 }
-.header-text {
+.headerText {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1em;
