--- a/src/pages/account-list/account-list.page.module.css
+++ b/src/pages/account-list/account-list.page.module.css
@@ -5,11 +5,13 @@
   margin: 20px 20px;
   border-bottom: 5px solid var(--secondary_color);
   padding-bottom: 15px;
-
   h1 {
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     font-size: 1.5em;
     font-weight: 300;
+  }
+  button {
+    text-decoration: none;
   }
 }
