--- a/src/pages/account-list/components/account-list-item.component.module.css
+++ b/src/pages/account-list/components/account-list-item.component.module.css
@@ -10,6 +10,8 @@
   font-size: 16px;
   padding: 15px;
   color: var(--secondary_color);
+  display: flex;
+  align-items: center;
 
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -19,7 +21,9 @@
   }
 }
 .align {
-  text-align: right;
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
 .bold {
   font-weight: 600;
