--- a/src/pages/movement-list/movement-list.page.module.css
+++ b/src/pages/movement-list/movement-list.page.module.css
@@ -19,11 +19,19 @@
     font-weight: 300;
   }
 }
-.caca {
+.headerBottom {
   display: flex;
   font-weight: bold;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   justify-content: space-between;
   margin: 20px 20px;
+}
+.saldo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.balance {
+  color: var(--primary_color);
 }
