--- a/src/pages/movement-list/movement-list.page.module.css
+++ b/src/pages/movement-list/movement-list.page.module.css
@@ -4,18 +4,17 @@
   justify-content: space-between;
   margin: 20px 20px;
   border-bottom: 5px solid var(--secondary_color);
-  padding-bottom: 15px;
 
   h1 {
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    font-size: 1.5em;
-    font-weight: 300;
+    font-size: 3em;
+    font-weight: lighter;
   }
   h3 {
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: 300;
   }
 }
@@ -34,4 +33,18 @@
 }
 .balance {
   color: var(--primary_color);
+  font-size: 1.5em;
+  font-weight: 600;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.iban {
+  font-size: 1.2em;
+  font-weight: bold;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande";
+}
+.alias {
+  font-size: 1.2em;
+  font-weight: bold;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande";
 }
