--- a/src/pages/movement-list/movement-list.page.module.css
+++ b/src/pages/movement-list/movement-list.page.module.css
@@ -4,12 +4,12 @@
   justify-content: space-between;
   margin: 20px 20px;
   border-bottom: 5px solid var(--secondary_color);
-
+  padding-bottom: 15px;
   h1 {
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    font-size: 3em;
-    font-weight: lighter;
+    font-size: 1.5em;
+    font-weight: 300;
   }
   h3 {
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -41,10 +41,12 @@
 .iban {
   font-size: 1.2em;
   font-weight: bold;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande";
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 .alias {
   font-size: 1.2em;
   font-weight: bold;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande";
+  font-family: "Lucida Sans", "Lucida Sans Regular",
+    "Lucida Grande" "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
