--- a/src/pages/create-account/components/create-account.component.module.css
+++ b/src/pages/create-account/components/create-account.component.module.css
@@ -3,10 +3,12 @@
   margin-top: 1.5rem;
   margin-left: 1rem;
 }
-.accountSelect {
-  width: 200px;
-}
+
 .formContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   border: none;
   border-bottom: 1px solid var(--secondary_color);
   padding: 40px 0;
@@ -17,24 +19,25 @@
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
 
+  label {
+    font-size: 0.9em;
+    font-weight: 500;
+    min-width: 100px;
+    text-align: right;
+  }
   div {
     display: flex;
     align-items: center;
-  }
-  label {
+    justify-content: center;
+    gap: 20px;
     margin: 20px;
-    margin-right: 20px;
-    font-size: 0.9em;
-    font-weight: 500;
-    min-width: 500px;
-    text-align: right;
   }
 }
-.boton {
+.botonContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 75px;
+  margin-top: 32px;
 }
 .small {
   width: 100px;
@@ -44,7 +47,4 @@
 }
 .medium {
   width: 250px;
-}
-.dateMargin {
-  margin-right: 175px;
 }
